--- a/2QProjArgonPera/css/CSS-Fishing-Pufferfish.css
+++ b/2QProjArgonPera/css/CSS-Fishing-Pufferfish.css
@@ -22,6 +22,15 @@ font-style:italic;}
 position:fixed;
 top:0px;}
 
+footer{
+float:left;
+background-color:#99DDFF; 
+width:1345px;
+height:180px; 
+padding:2px;
+margin:-8px;
+}
+
 .fb {
 background: url('../images/icon.png') no-repeat 0px 0px;
 width: 33px;
