--- a/2QProjArgonPera/css/CSS-Index.css
+++ b/2QProjArgonPera/css/CSS-Index.css
@@ -18,21 +18,30 @@ position:fixed;
 top:0px;}
 
 .fb {
-background: url('../images/icon.png') no-repeat 0px 0px;
+background: url('/images/icon.png') no-repeat 0px 0px;
 width: 33px;
 height: 33px;
 }
 
 .twitter {
-background: url('../images/icon.png') no-repeat -32px 0px;
+background: url('/images/icon.png') no-repeat -32px 0px;
 width: 33px;
 height: 33px;
 }
 
 .insta {
-background: url('../images/icon.png') no-repeat -64px 0px;
+background: url('/images/icon.png') no-repeat -64px 0px;
 width: 33px;
 height: 33px;
+}
+
+footer{
+float:left;
+background-color:#99DDFF; 
+width:1345px;
+height:180px; 
+padding:2px;
+margin:-8px;
 }
 
 a:link{
