--- a/2QProjArgonPera/css/CSS-Fishing-Pufferfish.css
+++ b/2QProjArgonPera/css/CSS-Fishing-Pufferfish.css
@@ -1,5 +1,15 @@
 body{font-family:Bodoni MT;}
 
+.title{
+border: #FFFFCC solid 2px;
+border-radius: 20px 20px 20px 20px;
+background-color:#99DDFF;
+height:50px;
+width:170px;
+margin-left:45px;
+transform: skewX(-10deg);
+}
+
 h1{
 font-weight:bold;
 font-size:40px;}
@@ -11,7 +21,9 @@ font-size:20px;}
 .button{
 margin:-70px 270px;
 position:fixed;
-left:900px;}
+left:900px;
+border-radius: 10px 10px 10px 10px;
+}
 
 .tagline{
 font-size:30px;
